--- a/src/styles/_amenities.scss
+++ b/src/styles/_amenities.scss
@@ -249,3 +249,44 @@
         }
     }
 }
+@media only screen and (max-width: 768px){
+    .amenities{
+        .intro-container{
+            height: 45vh;
+            width: 80vw;
+        }
+        .design-container{
+            height: 45vh;
+        }
+        .community-container{
+            height: 45vh;
+            width: 80vw;
+            margin: 8% auto;
+        }
+        .smarthouse-container{
+            height: 40vh;
+            .icons-box{
+                height: 25%;
+             
+                .icons-item{
+                    border-radius: 20px;
+                   .icon{
+                    height: 60%;
+                    width: 55%;
+                   }
+                }
+            }
+        }
+        .roof-container{
+            width: 100%;
+            height: 57vh;
+            .container-items{
+                width: 70%;
+            }
+            p{
+                width: 80%;
+                margin-bottom: 7px;
+            }
+        }
+    }
+}
