--- a/src/styles/_counter.scss
+++ b/src/styles/_counter.scss
@@ -31,36 +31,38 @@
        
     }
 
-    @media only screen and (max-width: 767px){
+    @media only screen and (max-width: 768px){
         .counter-container{
-            width: 100%;
             height: 49vh;
             background-color: #212121;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 1%;
-            margin-top: -15%;
             margin-bottom: 7%;
            
                 .counter-item{
                     height: 70%;
                     width: 30%;
                     text-align: center;
-                   
+                }
+               
+            }
+    }
+
+    @media only screen and (max-width: 768px){
+        .count{
+            height: 100%;
+        }
+        .counter-container{
+            height: 100%;
+                .counter-item{
+                    margin-top: 3%;
                     h2{
-                        font-size: 4.2vw;
-                        color: #D2B978;
-                        font-family: 'Inria Serif';
-                        font-weight: 100;
-                        
+                        font-size: 17px;
                     }
                     p{
-                        font-size: 4.2vw;
-                        margin-top: -6%;
-                        color: #fff;
-                        font-family: 'Inria Serif';
-                        font-weight: 200;
+                        font-size: 15px;
                     }
                 }
                
