--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -41,10 +41,27 @@
             }
             .contact-links{
                 margin-top: 24%;
-                color: white;
-                display: flex;
-                flex-direction: column;
-               
+
+                    display: flex;
+                    flex-direction: column;
+                    width: fit-content;
+                    .contact-list-item{
+                        display: inline-flex;
+                        vertical-align: middle;
+                        padding-bottom: 3px;
+                       
+                        .icon{
+                            font-size: 21px;
+                            color: white;
+                           
+                            
+                        }
+                        .text{
+                            font-size: 18px;
+                            margin-left: 10px;
+                            color: white;
+                        }
+                    }
                 .icon{
                     margin-right: 3%;
                     color: white;
@@ -123,17 +140,16 @@
     }
 }
 
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 768px){
     .form-container{
         display: flex;
         flex-direction: column;
-        height: 90vh;
-        font-family: 'Courier New', Courier, monospace;
+        height: auto;
        .container-content{
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 10% ;
+        padding: 3%;
         .contact-block{
             text-align: center;
             width: 100%;
@@ -145,51 +161,137 @@
                 text-align: center;
                 h3{
                     margin-left: 0;
-                    font-size: 3vw;
-                    margin-top: 6%;
+                    margin-top: 5%;  
                 }
                 h2{
-                    font-size: 10vw;
+                    
                 }
                 p{
                     margin-left: 0;
                     width: 100%;
-                    font-size: 3vw;
+                    
                 }
             }
             .contact-links{
-                margin-top: 10%;
-                .icon{
-                    font-size: 4vw;
+                margin-top: 3%;
+                
+                .contact-list-item{
+                   
+                   
+                    .icon{
+                        font-size: 9px;
+                       
+                       
+                        
+                    }
+                    .text{
+                        font-size: 9px;
+                       
+                    }
                 }
-                p{
-                    font-size: 3vw;
-                }
+              
             }
             
         }
         .contact-form-container{
-            width: 85vw;
+            width: 50%;
             margin-top: 5%;
-            
             form{
                 margin: 3% 1%;
-                .name-inputs{
-                    display: flex;
-                    flex-direction: column;
-                    input[type="text"]{
-                        width: 95%;
-                     
-                        
-                    }
+                input[type="text"],
+                input[type="tel"],
+                input[type="email"]{
+                height: 10px;
+                &::placeholder{
+                    font-size: 10px;
                 }
+               }
+               textarea{
+                &::placeholder{
+                    font-size: 10px;
+                }
+               }
                 
                 button[type="submit"]{
                     border-radius: 10px;
-                    width: 50vw;
+                    width: 100%;
                     height: 4.5vh;
                     margin: 2% auto;
-                    font-size: 4vw;
+                    font-size: 10px;
+                }
+            }
+           }
+       }
+      
+    }
+}
+
+@media only screen and (max-width: 471px){
+    .form-container{
+     
+       .container-content{
+       
+        .contact-block{
+   
+            .text-block{
+                text-align: center;
+                h3{
+                    margin-left: 0;
+                    margin-top: 5%; 
+                    font-size: 8px; 
+                }
+                h2{
+                    font-size: 40px;
+                }
+                p{
+                    margin-left: 0;
+                    width: 100%;
+                    font-size: 8px;
+                    
+                }
+            }
+            .contact-links{
+                margin-top: 3%;
+                
+                .contact-list-item{
+                   
+                   
+                    .icon{
+                        font-size: 9px;
+                       
+                       
+                        
+                    }
+                    .text{
+                        font-size: 9px;
+                       
+                    }
+                }
+              
+            }
+            
+        }
+        .contact-form-container{
+           width: 90%;
+            form{
+                margin: 3% 1%;
+                input[type="text"],
+                input[type="tel"],
+                input[type="email"]{
+               
+
+                &::placeholder{
+                    
+                }
+               }
+               textarea{
+                &::placeholder{
+                    
+                }
+               }
+                
+                button[type="submit"]{
+                   
                 }
             }
            }
