--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -78,6 +78,19 @@
     }
   }
 }
+@media only screen and (max-width: 471px){
+  .landing-container{
+   
+    .heading{
+    
+      h1{
+        font-size: 55px;
+      }
+      
+    }
+  }
+}
+
 
 
 
