--- a/src/styles/_amenities.scss
+++ b/src/styles/_amenities.scss
@@ -19,11 +19,9 @@
         .container{
             width: 100%;
             height: 100%;
-            
-        }
-        #first-section-img{
             @include bg-rules;
             background-size: cover;
+            
         }
         #text-block{
             display: flex;
@@ -286,7 +284,89 @@
             p{
                 width: 80%;
                 margin-bottom: 7px;
+                
             }
+        }
+    }
+}
+@media only screen and (max-width: 471px){
+    .amenities{
+        p{
+            font-size: 10px;
+        }
+        .intro-container{
+            flex-direction: column;
+            height: 50vh;
+            width: 95vw;
+            #fist-section-img{
+            order: 2;
+          }
+          #text-block{
+            h2{
+                margin-top: -2%;
+            }
+            p{
+                width: 80%;
+                margin-top: -2%;
+                font-size: 10px;
+            }
+          }
+        }
+        .design-container{
+            height: 30vh;
+            margin: 10% auto;
+            p{
+                width: 95%;
+                font-size: 10px;
+            }
+        }
+        .community-container{
+            flex-direction: column;
+            height: 50vh;
+            width: 95vw;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            margin-top: 0;
+            #community-container-img{
+                order: 2;
+                width: 100%;
+               
+            }
+            #text-block{
+                width: 100%;
+                h2{
+                    margin-top: -2%;
+                }
+                p{
+                    width: 90%;
+                    margin-top: -2%;
+                    font-size: 10px;
+                }
+              }
+
+        }
+        .smarthouse-container{
+            height: 40vh;
+            margin: 10% auto;
+            .text-block{
+                p{
+                    width: 100%;
+                }
+            }
+            .icons-box{
+                height: auto;
+              
+                .icons-item{
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 15px;
+                    
+                }
+            }
+        }
+        .roof-container{
+            height: 40vh;
         }
     }
 }
