--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -563,16 +563,18 @@ RESPONSIVE */
             .top-items{
                 .icon{
                     font-size: 12px;
-                   /*  padding-left: 20px;
-                    padding-right: 20px; */
+              
                 }
                 p{
                     font-size: 10px;
-                    /* padding-right: 10px; */
+                
                 }
             }
     
         }
+    }
+    .intro-container{
+        width: 90vw;
     }
     .parallax-section{
        height: 40vh;
@@ -594,6 +596,13 @@ RESPONSIVE */
             gap: 0;
             .offer-content{
                 width: 80%;
+                .arrow{
+                    width: 22px;
+                    height: 22px;
+                }
+                .arrow-icon{
+                    font-size: 11px;
+                }
                 .offer-content-nav{
                     height: auto;
                 }
