--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -76,6 +76,60 @@
                 }
             }
         }
+        .message-box{
+            width: 80%;
+            height: 450px;
+            background-color: #212221;
+            position: fixed;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            box-shadow: 10px  14px 50px rgba(0, 0, 0, 0.8);
+            border: 1px solid rgb(255, 239, 10);
+            border-top: 10px solid rgb(255, 190, 10);
+            z-index: 9999;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+                .message{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+                    
+                    .check{
+                        width: 70px;
+                        height: 70px;
+                        background-color: white;
+                        border-radius: 50%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        .icon{
+                            z-index: 2;
+                            font-size: 50px;
+                        }
+                    }
+                    h3{
+                        color: rgb(17, 117, 17);
+                    }
+                    h2{
+                        font-size: 20px;
+                        color: whitesmoke;
+                        font-weight: 100;
+                    }
+                    h4{
+                        font-size: 15px;
+                        color: whitesmoke;
+                        font-weight: 100;
+                    }
+                }
+
+        }
+        
+          
+     
         .contact-form-container{
             height: 100%;
             width: 40%;
@@ -84,7 +138,15 @@
                 flex-direction: column;
                 width: 100%;
                 height: 100%;
-              
+                input.input-error,
+                select.input-error{
+                    border-color: #c61919;
+                }
+                .error{
+                    font-size: 8px;
+                    color:#c61919;
+                    margin-top: -5px;
+                }
                 input[type="text"],
                       input[type="tel"],
                       input[type="email"],
