--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -24,6 +24,10 @@
                 align-items: center;
                 justify-content: center;
                 z-index: 1;
+                color: white;
+                height: fit-content;
+                transform: translateY(280%);
+               
 
                 .icon{
                     font-size: 2vw;
